deployment/deployment-autenticador.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autenticador
  labels:
    app: autenticador
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autenticador
  template:
    metadata:
      labels:
        app: autenticador
    spec:
      containers:
        - name: autenticador
          image: us-central1-docker.pkg.dev/proyecto-final-416123/proyecto-final/jwt-api:1.0.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: autenticador-service
  annotations:
    cloud.google.com/backend-config: '{"default": "autenticador-backend-config"}'
spec:
  type: NodePort
  selector:
    app: autenticador
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000
