deployment/deployment-eventos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventos
  labels:
    app: eventos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventos
  template:
    metadata:
      labels:
        app: eventos
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: tasks-key
      containers:
        - name: eventos
          image: us-central1-docker.pkg.dev/proyecto-final-416123/misw450x-registry/eventos-api:latest
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
          ports:
            - containerPort: 3011
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: eventos-service
  annotations:
    cloud.google.com/backend-config: '{"default": "eventos-backend-config"}'
spec:
  type: NodePort
  selector:
    app: eventos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3080
      nodePort: 30080
