deployment/deployment-indicadores.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indicadores
  labels:
    app: indicadores
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indicadores
  template:
    metadata:
      labels:
        app: indicadores
    spec:
      containers:
        - name: indicadores
          image: us-central1-docker.pkg.dev/proyecto-final-416123/misw450x-registry/indicadores-api:latest
          ports:
            - containerPort: 3060
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: indicadores-service
  annotations:
    cloud.google.com/backend-config: '{"default": "indicadores-backend-config"}'
spec:
  type: NodePort
  selector:
    app: indicadores
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3060
      nodePort: 30060
