deployment/deployment-monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
  labels:
    app: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      containers:
        - name: monitor
          image: us-central1-docker.pkg.dev/proyecto-final-416123/proyecto-final/monitor-api:1.0.0
          ports:
            - containerPort: 3010
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: monitor-service
  annotations:
    cloud.google.com/backend-config: '{"default": "monitor-backend-config"}'
spec:
  type: NodePort
  selector:
    app: monitor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3010
      nodePort: 30010
