deployment/deployment-notificaciones.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificaciones
  labels:
    app: notificaciones
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificaciones
  template:
    metadata:
      labels:
        app: notificaciones
    spec:
      containers:
        - name: notificaciones
          image: us-central1-docker.pkg.dev/proyecto-final-416123/misw450x-registry/notificaciones-api:latest
          ports:
            - containerPort: 3050
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: notificaciones-service
  annotations:
    cloud.google.com/backend-config: '{"default": "notificaciones-backend-config"}'
spec:
  type: NodePort
  selector:
    app: notificaciones
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3050
      nodePort: 30050
