deployment/deployment-perfiles.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: perfiles
  labels:
    app: perfiles
spec:
  replicas: 1
  selector:
    matchLabels:
      app: perfiles
  template:
    metadata:
      labels:
        app: perfiles
    spec:
      containers:
        - name: perfiles
          image: us-central1-docker.pkg.dev/proyecto-final-416123/proyecto-final/perfiles-api:1.0.0
          ports:
            - containerPort: 3021
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: perfiles-service
  annotations:
    cloud.google.com/backend-config: '{"default": "perfiles-backend-config"}'
spec:
  type: NodePort
  selector:
    app: perfiles
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3021
      nodePort: 30021
