deployment/deployment-planes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planes
  labels:
    app: planes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planes
  template:
    metadata:
      labels:
        app: planes
    spec:
      containers:
        - name: planes
          image: us-central1-docker.pkg.dev/proyecto-final-416123/misw450x-registry/planes-api:latest
          ports:
            - containerPort: 3030
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: planes-service
  annotations:
    cloud.google.com/backend-config: '{"default": "planes-backend-config"}'
spec:
  type: NodePort
  selector:
    app: planes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3030
      nodePort: 30030
