deployment/deployment-productos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productos
  labels:
    app: productos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productos
  template:
    metadata:
      labels:
        app: productos
    spec:
      containers:
        - name: productos
          image: us-central1-docker.pkg.dev/proyecto-final-416123/misw450x-registry/productos-api:latest
          ports:
            - containerPort: 3090
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: productos-service
  annotations:
    cloud.google.com/backend-config: '{"default": "productos-backend-config"}'
spec:
  type: NodePort
  selector:
    app: productos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3090
      nodePort: 30090
