deployment/deployment-sesiones.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sesiones
  labels:
    app: sesiones
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sesiones
  template:
    metadata:
      labels:
        app: sesiones
    spec:
      containers:
        - name: sesiones
          image: us-central1-docker.pkg.dev/proyecto-final-416123/misw450x-registry/sesiones-api:latest
          ports:
            - containerPort: 3070
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sesiones-service
  annotations:
    cloud.google.com/backend-config: '{"default": "sesiones-backend-config"}'
spec:
  type: NodePort
  selector:
    app: sesiones
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3070
      nodePort: 30070
