deployment/deployment-usuarios.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios
  labels:
    app: usuarios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
        - name: usuarios
          imagePullPolicy: Always
          image: us-central1-docker.pkg.dev/proyecto-final-416123/proyecto-final/usuarios-api:1.0.0
          ports:
            - containerPort: 3011
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: usuarios-service
  annotations:
    cloud.google.com/backend-config: '{"default": "usuarios-backend-config"}'
spec:
  type: NodePort
  selector:
    app: usuarios
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3011
      nodePort: 30011

# Vamos a especificar el balanceador de carga en este mismo archivo
# para ello vamos a crear otro documento separado, esto se hace con el operador "---"
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-usuarios
spec:
  type: LoadBalancer
  selector:
    app: usuarios
  # Declaracion y redireccion del trafico por los puertos
  # En este caso, estamos ocupando el puerto 80 para la conexión HTTP
  # y lo estamos redirigiendo al 3011 de la red virtual del pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3011
