deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-k8
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "misw450x-k8s-ip"
  labels:
    name: gateway-ingress-k8
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /usuarios
        backend:
          service:
            name: usuarios-service
            port: 
              number: 80
      - pathType: Prefix
        path: /perfiles
        backend:
          service:
            name: perfiles-service
            port: 
              number: 80
      - pathType: Prefix
        path: /auth
        backend:
          service:
            name: autenticador-service
            port: 
              number: 80
      - pathType: Prefix
        path: /planes
        backend:
          service:
            name: planes-service
            port: 
              number: 80
